--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,11 @@ body {
   background-color: var(--dark-mode);
 }
 
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 120px;
+}
+
 .portfolio-container {
   color: var(--primary-font-color);
 
@@ -86,7 +91,7 @@ body {
   align-items: center;
   box-shadow: 0 4px 5px 1px rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(80px);
-  z-index: 1;
+  z-index: 10;
 }
 
 .navbar-container {
@@ -324,6 +329,12 @@ body {
       border-radius: 8px;
       transition: var(--std-boxshadow-transition);
 
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 8px;
+      }
+
       &:hover {
         box-shadow: -1px -1px 5px 1px rgba(214, 225, 232, 0.4),
           1px 1px 5px 1px rgba(214, 225, 232, 0.4);
@@ -331,6 +342,7 @@ body {
     }
 
     .social-media-icons {
+      margin-left: 10px;
       grid-area: social;
       display: flex;
       flex-direction: column;
@@ -644,7 +656,7 @@ body {
 /* projects */
 #projects {
   margin: 150px 0 0 0;
-  padding: 3rem 0;
+  padding: 5rem 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -668,7 +680,7 @@ body {
       border: 1px solid transparent;
       border-radius: 10px;
       width: 600px;
-      height: 165px;
+      height: 185px;
       background-color: rgba(112, 112, 112, 0.2);
       display: grid;
       grid-template-columns: auto auto;
@@ -683,6 +695,7 @@ body {
         grid-row: 1 / span 1;
         width: 90px;
         height: 90px;
+        padding: 5px;
         margin-top: 10px;
       }
 
