--- a/styles.css
+++ b/styles.css
@@ -401,6 +401,7 @@ html {
   align-items: center;
   background: var(--secondary-bg-color);
   border-radius: var(--default-b-r);
+  min-height: 0;
 
   .information-container {
     display: grid;
@@ -534,8 +535,7 @@ html {
     margin: 5px 5px 5px 40px;
     max-width: 1100px;
     max-height: calc(100vh - 430px);
-    overflow-y: auto;
-    overflow-x: hidden;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -742,6 +742,7 @@ html {
   width: 100%;
   background: var(--secondary-bg-color);
   border-radius: var(--default-b-r);
+  min-height: 0;
 
   .project-container {
     margin: 25px 0 50px 0;
@@ -764,6 +765,7 @@ html {
       padding: 20px;
       margin: 10px;
       position: relative;
+      min-height: 0;
 
       .project-logo {
         border: 1px solid var(--tertiary-blue);
@@ -835,6 +837,7 @@ html {
     flex-direction: column;
     width: 100%;
     max-width: 920px;
+    min-height: 0;
     height: 100%;
     font-weight: 500;
     border-right: 1px solid var(--tertiary-blue);
@@ -1524,6 +1527,7 @@ footer {
 @media (min-width: 374px) and (max-width: 668px) {
   .portfolio-container {
     overflow-x: hidden;
+    max-width: 100vw;
     #stars-container {
       width: calc(100vw - 1%);
     }
